--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 }
 
 .container {
+    box-sizing: border-box;
     background-color: #a30262;
     border-radius: 16px;
     height: 700px;
@@ -23,9 +24,11 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex: 0 0 auto
 }
 
 .options {
+    box-sizing: border-box;
     background-color: #d362a4;
     border-radius: 8px;
     padding: 10px;
@@ -35,6 +38,7 @@ h1 {
 }
 
 .canvas {
+    box-sizing: border-box;
     border-radius: 8px;
     display: flex;
     background-color: #d362a4;
@@ -43,12 +47,20 @@ h1 {
     width: 600px;
     flex-wrap: wrap;
     /* gap: 0px; */
-    flex: auto;
+    flex: 0 0 auto;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .grid-item {
-    border: 2px black;
+    box-sizing: border-box;
+    padding: none;
+    margin: none;
+    border: black;
     background-color: white;
-    width: auto;
+    width: 36.25px;
+    height: 36.25px;
+    display: inline-block;
+    color: rgba(255, 255, 255, 0);
 }
 
