--- a/style.css
+++ b/style.css
@@ -33,8 +33,23 @@ h1 {
     border-radius: 8px;
     padding: 10px;
     display: flex;
+    flex-direction: column;
     height: 600px;
     width: 300px;
+    justify-content: space-evenly;
+}
+
+button {
+    box-sizing: border-box;
+    background-color:#a30262;
+    border: none;
+    border-radius: 8px;
+    padding: 8px;
+    color: #d362a4;
+    font-family: "Abadi MT Condensed";
+    font-size: 32px;
+    font-weight: 400;
+
 }
 
 .canvas {
