Update shade of off white

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ button {
     border: none;
     border-radius: 8px;
     padding: 8px;
-    color: #d39dbc;
+    color: #ffddf0;
     font-family: "Abadi MT Condensed";
     font-size: 32px;
     font-weight: 400;
